--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <meta name="google-signin-client_id" content="265145713939-hb3jlne3h3cvj2sd4ok5f7pa2s2rk781.apps.googleusercontent.com">
   <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -21,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>YCC</title>
+  <title>React Redux Antd</title>
 </head>
 
 <body>
